man page translations: update Spanish

--- a/doc/man/po4a/po/es.po
+++ b/doc/man/po4a/po/es.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: MKVToolNix 8.0.0\n"
 "POT-Creation-Date: 2025-02-08 14:26+0100\n"
 "PO-Revision-Date: 2016-02-03 20:53+0000\n"
-"Last-Translator: Casper, 2024\n"
+"Last-Translator: Casper, 2024-2025\n"
 "Language-Team: Spanish (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/es/)\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
@@ -3660,13 +3660,13 @@ msgstr "Lee argumentos adicionales de la línea de comandos desde el archivo <pa
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:2391
 msgid "If you want to use the <literal>@</literal> sign as the first character in the argument to an option such as '<literal>--title</literal>', you have to escape it with a second <literal>@</literal> sign. Example:"
-msgstr ""
+msgstr "Si desea usar el signo <literal>@</literal> como primer carácter en el argumento de una opción como '<literal>--title</literal>', tienes que escapar de él con un segundo signo <literal>@</literal>. Ejemplo:"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><screen>
 #: doc/man/mkvmerge.xml:2395
 #, no-wrap
 msgid "$ mkvmerge -o midnight-s01e01.mkv --title @@midnight midnight-s01e01.mp4"
-msgstr ""
+msgstr "$ mkvmerge -o midnight-s01e01.mkv --title @@midnight midnight-s01e01.mp4"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:2400
