program translations: update French

--- a/po/fr.po
+++ b/po/fr.po
@@ -10337,9 +10337,9 @@ msgid "Derive \"forced display\" fla&g for subtitles from file names:"
 msgstr "Dériver l'indicateur « affichage forcé » pour les sous-titres depuis les noms de fichiers :"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2362
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Derive \"commentar&y\" flag for audio/subtitles from file names:"
-msgstr "Dériver l'indicateur « &malentendant » pour l'audio/les sous-titres depuis les noms de fichiers :"
+msgstr "Déri&ver l'indicateur « Commentaires » de l'audio et des sous-titres depuis les noms de fichiers :"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2363
 #, no-c-format
@@ -10347,9 +10347,9 @@ msgid "Derive \"&hearing impaired\" flag for audio/subtitles from file names:"
 msgstr "Dériver l'indicateur « &malentendant » pour l'audio/les sous-titres depuis les noms de fichiers :"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2364
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Set \"original language\" flag for audio/subtitles for language:"
-msgstr "Dériver l'indicateur « &malentendant » pour l'audio/les sous-titres depuis les noms de fichiers :"
+msgstr "Définir l'indicateur « Langue d'origine » de l'audio et des sous-titres pour la langue :"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2365
 #, no-c-format
@@ -13469,19 +13469,19 @@ msgid "The GUI can set the 'hearing impaired' flag for such tracks if the file n
 msgstr "L'interface du programme peut définir l'indicateur « malentendant » pour de telles pistes si le nom de fichier correspond à cette expression régulière."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:537
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Audio and subtitle files often contain the words 'comments' or 'commentary' in their file name to signal that they contain content such as a movie director's comments."
-msgstr "Les noms de fichiers contiennent souvent les chaînes « cc » ou « sdh » pour indiquer qu'ils sont destinés aux personnes malentendantes."
+msgstr "Les termes 'comments' ou 'commentary' apparaissent souvent dans les noms des fichiers audio et de sous-titres pour signaler qu'ils contiennent du contenu tel que les commentaires du réalisateur du film."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:538
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The GUI can set the 'commentary' flag for such tracks if the file name matches this regular expression."
-msgstr "L'interface du programme peut définir l'indicateur « affichage forcé » pour de telles pistes si le nom de fichier correspond à cette expression régulière."
+msgstr "L'interface peut définir l'indicateur « Commentaires » pour de telles pistes si le nom de fichier correspond à cette expression régulière."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:544
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The GUI can set the 'original language' flag audio and subtitle tracks if the track's language matches this language."
-msgstr "L'interface du programme peut définir l'indicateur « malentendant » pour de telles pistes si le nom de fichier correspond à cette expression régulière."
+msgstr "L'interface peut définir l'indicateur « Langue d'origine » des pistes audio et de sous-titres si la langue de la piste correspond à cette langue."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:550
 #, no-c-format
@@ -13944,9 +13944,9 @@ msgid "The list of recognized track languages in file names must not be empty."
 msgstr "La liste de langues de pistes reconnues dans les noms de fichiers ne doit pas être vide."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:1599
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The value for deriving the 'commentary' flag from file names must be a valid regular expression."
-msgstr "La valeur pour dériver l'indicateur « malentendant » depuis les noms de fichiers doit être une expression régulière valide."
+msgstr "La valeur pour dériver l'indicateur « Commentaires » depuis les noms de fichiers doit être une expression régulière."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:1615
 #, no-c-format
