program translations: update Russian

--- a/po/ru.po
+++ b/po/ru.po
@@ -10078,9 +10078,9 @@ msgid "Derive \"forced display\" fla&g for subtitles from file names:"
 msgstr "Извлекать флаг субтитров \"&принудительный показ\" из имён файлов:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2362
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Derive \"commentar&y\" flag for audio/subtitles from file names:"
-msgstr "Извлекать флаг \"для слаб&ослышащих\" для аудио/субтитров из имён файлов:"
+msgstr "Извлекать флаг \"комме&нтарии\" для аудио/субтитров из имён файлов:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2363
 #, no-c-format
@@ -10088,9 +10088,9 @@ msgid "Derive \"&hearing impaired\" flag for audio/subtitles from file names:"
 msgstr "Извлекать флаг \"для слаб&ослышащих\" для аудио/субтитров из имён файлов:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2364
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Set \"original language\" flag for audio/subtitles for language:"
-msgstr "Извлекать флаг \"для слаб&ослышащих\" для аудио/субтитров из имён файлов:"
+msgstr "Задать флаг \"исходный язык\" для языка аудио/субтитров:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2365
 #, no-c-format
@@ -13222,19 +13222,19 @@ msgid "The GUI can set the 'hearing impaired' flag for such tracks if the file n
 msgstr "Графический интерфейс может установить флаг \"для слабослышащих\" для таких дорожек, если имя файла соответствует этому регулярному выражению."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:537
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Audio and subtitle files often contain the words 'comments' or 'commentary' in their file name to signal that they contain content such as a movie director's comments."
-msgstr "Файлы аудио и субтитров часто содержат слова \"cc\" или \"sdh\" в имени, чтобы показать предназначение для людей с нарушениями слуха."
+msgstr "Файлы аудио и субтитров часто содержат слова \"комментарий\" или \"комментарии\" в своём названии для индикации того, что внутри них представлены комментарии режиссёра и иных создателей фильма."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:538
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The GUI can set the 'commentary' flag for such tracks if the file name matches this regular expression."
-msgstr "Графическая оболочка может установить флаг \"принудительный показ\" для подобных дорожек, если имя файла соответствует этому регулярному выражению."
+msgstr "Графическая оболочка может установить флаг \"комментарии\" для подобных дорожек, если имя файла соответствует этому регулярному выражению."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:544
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The GUI can set the 'original language' flag audio and subtitle tracks if the track's language matches this language."
-msgstr "Графический интерфейс может установить флаг \"для слабослышащих\" для таких дорожек, если имя файла соответствует этому регулярному выражению."
+msgstr "Графическая оболочка может установить флаг \"комментарии\" для подобных дорожек аудио и субтитров, если их язык соответствует этому языку."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:550
 #, no-c-format
@@ -13699,9 +13699,9 @@ msgid "The list of recognized track languages in file names must not be empty."
 msgstr "Список распознанных языков дорожек в именах файлов не должен быть пустым."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:1599
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The value for deriving the 'commentary' flag from file names must be a valid regular expression."
-msgstr "Значение для извлечения флага \"для слабослышащих\" из имён файлов должно быть верным регулярным выражением."
+msgstr "Значение для извлечения флага \"комментарии\" из имён файлов должно быть верным регулярным выражением."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:1615
 #, no-c-format
