program translations: update Turkish

--- a/po/tr.po
+++ b/po/tr.po
@@ -10313,9 +10313,9 @@ msgid "Derive \"forced display\" fla&g for subtitles from file names:"
 msgstr "Dosya adlarından altyazılar için \"zorunlu görüntüle\" iş&aretini türet:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2362
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Derive \"commentar&y\" flag for audio/subtitles from file names:"
-msgstr "Dosya adlarından ses/altyazılar için \"&işitme engelliler\" işaretini türet:"
+msgstr "Dosya adlarından ses/altyazılar için \"&yorum\" işaretini türet:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2363
 #, no-c-format
