translations: add missing word

--- a/po/ca.po
+++ b/po/ca.po
@@ -13527,7 +13527,7 @@ msgstr "La IGU pot establir l'etiqueta «Força el mostrar» per a aquestes pist
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:544
 #, fuzzy, no-c-format
-msgid "The GUI can set the 'original language' flag audio and subtitle tracks if the track's language matches this language."
+msgid "The GUI can set the 'original language' flag for audio and subtitle tracks if the track's language matches this language."
 msgstr "La IGU pot establir l'etiqueta «discapacitat auditiva» per a aquestes pistes si el nom del fitxer coincideix amb aquesta expressió regular."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:550
