--- a/po/de.po
+++ b/po/de.po
@@ -13478,7 +13478,7 @@ msgstr "Die GUI kann den Schalter für »Kommentare« für solche Spuren setzen,
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:544
 #, no-c-format
-msgid "The GUI can set the 'original language' flag audio and subtitle tracks if the track's language matches this language."
+msgid "The GUI can set the 'original language' flag for audio and subtitle tracks if the track's language matches this language."
 msgstr "Die GUI kann den »Originalsprache«-Schalter für solche Spuren setzen, wenn die Spursprache der hier eingestellten Sprache entspricht."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:550
