--- a/po/es.po
+++ b/po/es.po
@@ -13557,7 +13557,7 @@ msgstr "La interfaz gráfica de usuario puede activar la opción \"visualizació
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:544
 #, fuzzy, no-c-format
-msgid "The GUI can set the 'original language' flag audio and subtitle tracks if the track's language matches this language."
+msgid "The GUI can set the 'original language' flag for audio and subtitle tracks if the track's language matches this language."
 msgstr "La Interfaz Gráfica de Usuario puede establecer el indicador de \"discapacidad auditiva\" para dichas pistas si el nombre del archivo coincide con esta expresión regular."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:550
