--- a/po/fr.po
+++ b/po/fr.po
@@ -13480,7 +13480,7 @@ msgstr "L'interface peut définir l'indicateur « Commentaires » pour de tell
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:544
 #, no-c-format
-msgid "The GUI can set the 'original language' flag audio and subtitle tracks if the track's language matches this language."
+msgid "The GUI can set the 'original language' flag for audio and subtitle tracks if the track's language matches this language."
 msgstr "L'interface peut définir l'indicateur « Langue d'origine » des pistes audio et de sous-titres si la langue de la piste correspond à cette langue."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:550
