--- a/po/it.po
+++ b/po/it.po
@@ -13499,7 +13499,7 @@ msgstr "Se il nome del file corrisponde a questa espressione regolare la GUI pu√
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:544
 #, fuzzy, no-c-format
-msgid "The GUI can set the 'original language' flag audio and subtitle tracks if the track's language matches this language."
+msgid "The GUI can set the 'original language' flag for audio and subtitle tracks if the track's language matches this language."
 msgstr "La GUI pu√≤ impostare il flag 'non udenti' per tali tracce se il nome del file corrisponde a questa espressione regolare."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:550
