--- a/po/nl.po
+++ b/po/nl.po
@@ -13445,7 +13445,7 @@ msgstr "De GUI kan de vlag 'geforceerde weergave' voor dergelijke tracks instell
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:544
 #, fuzzy, no-c-format
-msgid "The GUI can set the 'original language' flag audio and subtitle tracks if the track's language matches this language."
+msgid "The GUI can set the 'original language' flag for audio and subtitle tracks if the track's language matches this language."
 msgstr "De GUI kan de vlag 'slechthorend' voor dergelijke tracks instellen als de bestandsnaam overeenkomt met deze reguliere expressie."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:550
