--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -13501,7 +13501,7 @@ msgstr "O GUI pode definir a flag 'exibição forçada' para as faixas se o nome
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:544
 #, fuzzy, no-c-format
-msgid "The GUI can set the 'original language' flag audio and subtitle tracks if the track's language matches this language."
+msgid "The GUI can set the 'original language' flag for audio and subtitle tracks if the track's language matches this language."
 msgstr "A GUI pode definir a flag 'deficientes auditivos' para essas faixas se o nome do arquivo corresponder a esta expressão regular."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:550
