--- a/po/tr.po
+++ b/po/tr.po
@@ -13444,7 +13444,7 @@ msgstr "Dosya adı bu düzenli ifadeyle eşleşiyorsa, GKA bu tür izler için '
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:544
 #, fuzzy, no-c-format
-msgid "The GUI can set the 'original language' flag audio and subtitle tracks if the track's language matches this language."
+msgid "The GUI can set the 'original language' flag for audio and subtitle tracks if the track's language matches this language."
 msgstr "Dosya adı bu düzenli ifadeyle eşleşiyorsa, GKA bu tür izler için 'işitme engelliler' işaretini ayarlayabilir."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:550
