--- a/po/uk.po
+++ b/po/uk.po
@@ -13459,7 +13459,7 @@ msgstr "Графічна оболонка може встановити прап
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:544
 #, fuzzy, no-c-format
-msgid "The GUI can set the 'original language' flag audio and subtitle tracks if the track's language matches this language."
+msgid "The GUI can set the 'original language' flag for audio and subtitle tracks if the track's language matches this language."
 msgstr "Графічний інтерфейс може встановити прапорець \"для слабочуючих\" для таких доріжок, якщо ім'я файлу відповідає цьому регулярному виразу."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:550
