--- a/po/nb.po
+++ b/po/nb.po
@@ -13454,7 +13454,7 @@ msgstr "Det grafiske grensesnittet kan sette \"tvungen visning\"-flagget for sli
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:544
 #, fuzzy, no-c-format
-msgid "The GUI can set the 'original language' flag audio and subtitle tracks if the track's language matches this language."
+msgid "The GUI can set the 'original language' flag for audio and subtitle tracks if the track's language matches this language."
 msgstr "Det grafiske grensesnittet kan angi flagget for hørselshemmede for slike spor hvis filnavnet samsvarer med dette regulære uttrykket."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:550
