--- a/po/ru.po
+++ b/po/ru.po
@@ -13233,7 +13233,7 @@ msgstr "Графическая оболочка может установить 
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:544
 #, no-c-format
-msgid "The GUI can set the 'original language' flag audio and subtitle tracks if the track's language matches this language."
+msgid "The GUI can set the 'original language' flag for audio and subtitle tracks if the track's language matches this language."
 msgstr "Графическая оболочка может установить флаг \"комментарии\" для подобных дорожек аудио и субтитров, если их язык соответствует этому языку."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:550
