program translations: update Spanish

--- a/po/es.po
+++ b/po/es.po
@@ -10412,9 +10412,9 @@ msgid "Derive \"forced display\" fla&g for subtitles from file names:"
 msgstr "Deducir el in&dicador de \"visualización forzada\" de los subtítulos a partir de los nombres de archivo:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2362
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Derive \"commentar&y\" flag for audio/subtitles from file names:"
-msgstr "Derive el indicador \"Personas con Discapacidad Auditiva\" para audio/subtítulos a partir de nombres de archivos:"
+msgstr "Derive el indicador \"comentar&io\" para audio/subtítulos a partir de los nombres de archivo:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2363
 #, no-c-format
@@ -10422,9 +10422,9 @@ msgid "Derive \"&hearing impaired\" flag for audio/subtitles from file names:"
 msgstr "Derive el indicador \"Personas con Discapacidad Auditiva\" para audio/subtítulos a partir de nombres de archivos:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2364
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Set \"original language\" flag for audio/subtitles for language:"
-msgstr "Derive el indicador \"Personas con Discapacidad Auditiva\" para audio/subtítulos a partir de nombres de archivos:"
+msgstr "Establecer el indicador de \"idioma original\" para audio/subtítulos para el idioma:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2365
 #, no-c-format
@@ -13546,19 +13546,19 @@ msgid "The GUI can set the 'hearing impaired' flag for such tracks if the file n
 msgstr "La Interfaz Gráfica de Usuario puede establecer el indicador de \"discapacidad auditiva\" para dichas pistas si el nombre del archivo coincide con esta expresión regular."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:537
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Audio and subtitle files often contain the words 'comments' or 'commentary' in their file name to signal that they contain content such as a movie director's comments."
-msgstr "Los archivos de audio y subtítulos suelen contener las palabras \"cc\" o \"sdh\" en su nombre para indicar que están destinados a personas con discapacidad auditiva."
+msgstr "Los archivos de audio y subtítulos a menudo contienen las palabras \"comentarios\" o \"comentario\" en su nombre de archivo para indicar que contienen contenido como los comentarios de un director de película."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:538
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The GUI can set the 'commentary' flag for such tracks if the file name matches this regular expression."
-msgstr "La interfaz gráfica de usuario puede activar la opción \"visualización forzada\" para estas pistas si el nombre del archivo coincide con esta expresión regular."
+msgstr "La GUI puede establecer el indicador 'comentario' para dichas pistas si el nombre del archivo coincide con esta expresión regular."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:544
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The GUI can set the 'original language' flag for audio and subtitle tracks if the track's language matches this language."
-msgstr "La Interfaz Gráfica de Usuario puede establecer el indicador de \"discapacidad auditiva\" para dichas pistas si el nombre del archivo coincide con esta expresión regular."
+msgstr "La GUI puede establecer el indicador de \"idioma original\" para las pistas de audio y subtítulos si el idioma de la pista coincide con este idioma."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:550
 #, no-c-format
@@ -13963,7 +13963,7 @@ msgstr "También si el idioma es 'indeterminado' ('und')."
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:1099
 #, no-c-format
 msgid "Always"
-msgstr ""
+msgstr "Siempre"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:1442
 #, no-c-format
@@ -14021,9 +14021,9 @@ msgid "The list of recognized track languages in file names must not be empty."
 msgstr "La lista de idiomas reconocidos de pista en los nombres de los archivos no puede estar vacía."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:1599
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The value for deriving the 'commentary' flag from file names must be a valid regular expression."
-msgstr "El valor para derivar el indicador de \"discapacidad auditiva\" a partir de nombres de archivos debe ser una expresión regular válida."
+msgstr "El valor para derivar el indicador 'comentario' de los nombres de archivo debe ser una expresión regular válida."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:1615
 #, no-c-format
