program translations: update Italian

--- a/po/it.po
+++ b/po/it.po
@@ -8,7 +8,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2025-02-23 20:23+0100\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: ROBERTO BORIOTTI <roberto.boriotti@canon.it>, 2021-2024\n"
+"Last-Translator: ROBERTO BORIOTTI <roberto.boriotti@canon.it>, 2021-2025\n"
 "Language-Team: Italian (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
 "language/it/)\n"
 "Language: it\n"
@@ -9899,19 +9899,19 @@ msgid "Add files from clip&board"
 msgstr "Aggiungi file dagli Appunti"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:770
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Save all settings to single file"
-msgstr "Salva file impostazioni come"
+msgstr "Salva tutte le impostazioni in un singolo file"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:772
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Ctrl+Shift+S"
-msgstr "Ctrl+Maiusc+L"
+msgstr "Ctrl+Miuasc+S"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:774
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Save all settings to single file as"
-msgstr "Salva file impostazioni come"
+msgstr "Salva tutte le impostazioni in un singolo file come"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:775
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:777
@@ -10350,9 +10350,9 @@ msgid "Derive \"forced display\" fla&g for subtitles from file names:"
 msgstr "Deriva il flag \"visualizzazione forzata\" per i sottotitoli dai nomi dei file:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2362
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Derive \"commentar&y\" flag for audio/subtitles from file names:"
-msgstr "Deriva il flag \"&problemi uditivi\" per audio/sottotitoli dai nomi dei file:"
+msgstr "Deriva flag \"commen&to\" per audio/sottotitoli dai nomi file:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2363
 #, no-c-format
@@ -10360,9 +10360,9 @@ msgid "Derive \"&hearing impaired\" flag for audio/subtitles from file names:"
 msgstr "Deriva il flag \"&problemi uditivi\" per audio/sottotitoli dai nomi dei file:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2364
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Set \"original language\" flag for audio/subtitles for language:"
-msgstr "Deriva il flag \"&problemi uditivi\" per audio/sottotitoli dai nomi dei file:"
+msgstr "Imposta flag \"Lingua originale\" per l'audio/sottotitoli per la lingua:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2365
 #, no-c-format
@@ -13488,19 +13488,19 @@ msgid "The GUI can set the 'hearing impaired' flag for such tracks if the file n
 msgstr "La GUI può impostare il flag 'non udenti' per tali tracce se il nome del file corrisponde a questa espressione regolare."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:537
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Audio and subtitle files often contain the words 'comments' or 'commentary' in their file name to signal that they contain content such as a movie director's comments."
-msgstr "I file audio e i sottotitoli spesso contengono le parole \"cc\" o \"sdh\" nel nome del file per segnalare che sono destinati a persone con problemi di udito."
+msgstr "I file audio e sottotitoli contengono spesso le parole \"commenti\" o \"commento\" nel nome del file per segnalare che contengono contenuti come i commenti di un regista."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:538
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The GUI can set the 'commentary' flag for such tracks if the file name matches this regular expression."
-msgstr "Se il nome del file corrisponde a questa espressione regolare la GUI può impostare il flag di \"visualizzazione forzata\" per tali tracce."
+msgstr "La GUI può impostare il flag \"commento\" per tali tracce se il nome del file corrisponde a questa espressione regolare."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:544
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The GUI can set the 'original language' flag for audio and subtitle tracks if the track's language matches this language."
-msgstr "La GUI può impostare il flag 'non udenti' per tali tracce se il nome del file corrisponde a questa espressione regolare."
+msgstr "La GUI può impostare il flag \"Lingua originale\" per tracce audio e sottotitoli se la lingua della traccia corrisponde a questa lingua."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:550
 #, no-c-format
@@ -13963,9 +13963,9 @@ msgid "The list of recognized track languages in file names must not be empty."
 msgstr "L'elenco delle lingue traccia riconosciute nei nomi dei file non deve essere vuoto."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:1599
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The value for deriving the 'commentary' flag from file names must be a valid regular expression."
-msgstr "Il valore per derivare il flag 'non udenti' dai nomi dei file deve essere un'espressione regolare valida."
+msgstr "Il valore per derivare il flag \"commento\" dai nomi dei file deve essere un'espressione regolare valida."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:1615
 #, no-c-format
