program translations: update Turkish

--- a/po/tr.po
+++ b/po/tr.po
@@ -10315,7 +10315,7 @@ msgstr "Dosya adlarından altyazılar için \"zorunlu görüntüle\" iş&aretini
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2362
 #, no-c-format
 msgid "Derive \"commentar&y\" flag for audio/subtitles from file names:"
-msgstr "Dosya adlarından ses/altyazılar için \"&yorum\" işaretini türet:"
+msgstr "Şu dosya adlarından ses/altyazılar için \"&yorum\" işaretini türet:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2363
 #, no-c-format
@@ -10323,9 +10323,9 @@ msgid "Derive \"&hearing impaired\" flag for audio/subtitles from file names:"
 msgstr "Dosya adlarından ses/altyazılar için \"&işitme engelliler\" işaretini türet:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2364
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Set \"original language\" flag for audio/subtitles for language:"
-msgstr "Dosya adlarından ses/altyazılar için \"&işitme engelliler\" işaretini türet:"
+msgstr "Şu dil için ses/altyazıların \"orijinal dil\" işaretini ayarla:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2365
 #, no-c-format
