program translations: update French

--- a/po/fr.po
+++ b/po/fr.po
@@ -10352,9 +10352,9 @@ msgid "Default subtitle &charset to set:"
 msgstr "Jeu de &caractères de sous-titres à définir par défaut :"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2372
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Derive flags from trac&k names in addition to file names"
-msgstr "Déduction des langues de pistes depuis les noms de  fichiers"
+msgstr "Dériver les indicateurs depuis les noms de p&istes en plus des noms de fichiers"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2373
 #, no-c-format
@@ -13501,7 +13501,7 @@ msgstr "L'interface du programme peut définir l'indicateur « affichage forcé
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:558
 #, no-c-format
 msgid "If enabled, the flags mentioned above will be derived from track names as well, not just from file names."
-msgstr ""
+msgstr "Si activé, les indicateurs ci-dessus seront aussi dérivés depuis les noms de pistes, et pas seulement depuis les noms de fichiers."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:560
 #, no-c-format
