program translations: update Russian

--- a/po/ru.po
+++ b/po/ru.po
@@ -10093,9 +10093,9 @@ msgid "Default subtitle &charset to set:"
 msgstr "Кодировка су&бтитров по умолчанию:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2372
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Derive flags from trac&k names in addition to file names"
-msgstr "Выбирать языки дорожек из имён файлов"
+msgstr "Изв&лекать флаги из имён дорожек в дополнение к именам файлов"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2373
 #, no-c-format
@@ -13254,7 +13254,7 @@ msgstr "Графическая оболочка может установить 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:558
 #, no-c-format
 msgid "If enabled, the flags mentioned above will be derived from track names as well, not just from file names."
-msgstr ""
+msgstr "Если включено, флаги, упомянутые выше, будут извлекаться и из имён дорожек, а не только из имён файлов."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:560
 #, no-c-format
