--- a/po/tr.po
+++ b/po/tr.po
@@ -10328,9 +10328,9 @@ msgid "Default subtitle &charset to set:"
 msgstr "Varsayılan &altyazı karakter kümesini şuna ayarla:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2372
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Derive flags from trac&k names in addition to file names"
-msgstr "Dosya adlarından türetilen iz dilleri"
+msgstr "Dosya adlarına ek olarak i&z adlarından işaretler türet"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2373
 #, no-c-format
@@ -13438,19 +13438,19 @@ msgid "The GUI can set the 'hearing impaired' flag for such tracks if the file n
 msgstr "Dosya adı bu düzenli ifadeyle eşleşiyorsa, GKA bu tür izler için 'işitme engelliler' işaretini ayarlayabilir."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:538
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Audio and subtitle files often contain the words 'comments' or 'commentary' in their file name to signal that they contain content such as a movie director's comments."
-msgstr "Ses ve altyazı dosyalarının, işitme engelli kişilere yönelik olduklarını belirtmek için dosya adlarında genellikle 'cc' veya 'sdh' kelimeleri bulunur."
+msgstr "Ses ve altyazı dosyaları, bir film yönetmeninin açıklamaları gibi içerik içerdiklerini belirtmek için dosya adlarında genellikle 'açıklamalar' veya 'yorum' kelimelerini içerir."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:539
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The GUI can set the 'commentary' flag for such tracks if the file name matches this regular expression."
-msgstr "Dosya adı bu düzenli ifadeyle eşleşiyorsa, GKA bu tür izler için 'zorunlu görüntüle' işaretini ayarlayabilir."
+msgstr "GKA, dosya adı bu düzenli ifadeyle eşleşirse, bu tür izler için 'yorum' işaretini ayarlayabilir."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:545
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The GUI can set the 'original language' flag for audio and subtitle tracks if the track's language matches this language."
-msgstr "Dosya adı bu düzenli ifadeyle eşleşiyorsa, GKA bu tür izler için 'işitme engelliler' işaretini ayarlayabilir."
+msgstr "GKA, izin dili bu dille eşleşirse, ses ve altyazı izleri için 'orijinal dil' işaretini ayarlayabilir."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:551
 #, no-c-format
@@ -13465,7 +13465,7 @@ msgstr "Dosya adı bu düzenli ifadeyle eşleşiyorsa, GKA bu tür izler için '
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:558
 #, no-c-format
 msgid "If enabled, the flags mentioned above will be derived from track names as well, not just from file names."
-msgstr ""
+msgstr "Eğer etkinleştirildiyse, yukarıda bahsedilen işaretler sadece dosya adlarından değil, iz adlarından da türetilecektir."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:560
 #, no-c-format
@@ -13916,9 +13916,9 @@ msgid "The list of recognized track languages in file names must not be empty."
 msgstr "Dosya adlarındaki tanınan iz dillerinin listesi boş olmamak zorundadır."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:1603
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The value for deriving the 'commentary' flag from file names must be a valid regular expression."
-msgstr "Dosya adlarından 'işitme engelliler' işaretini türetme değeri geçerli bir düzenli ifade olmak zorundadır."
+msgstr "'Yorum' işaretini dosya adlarından türetmenin değeri geçerli bir düzenli ifade olmak zorundadır."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:1619
 #, no-c-format
@@ -14596,7 +14596,7 @@ msgstr "Eğer 'hayır' olarak ayarlanırsa o zaman seçilen izler hedef dosyaya 
 #: src/mkvtoolnix-gui/merge/input.cpp:553
 #, no-c-format
 msgid "A name for this track that players can display helping the user choose the right track to play, e.g. \"director's comments\"."
-msgstr "Kullanıcılara doğru izi oynatmak için seçmesinde yardım eden, oynatıcıların görüntüleyebildiği bu izin adı örn. \"yönetmenin yorumları\"."
+msgstr "Kullanıcılara doğru izi oynatmak için seçmesinde yardım eden, oynatıcıların görüntüleyebildiği bu izin adı örn. \"yönetmenin açıklamaları\"."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:554
 #, no-c-format
