program translations: update French

--- a/po/fr.po
+++ b/po/fr.po
@@ -10204,7 +10204,7 @@ msgstr "Tou&jours créer de nouveaux paramètres pour les fichiers contenant des
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2344
 #, no-c-format
 msgid "Show special drag && drop &zones"
-msgstr ""
+msgstr "Afficher les zones de glisser-déposer spéciales"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2345
 #, no-c-format
@@ -11542,7 +11542,7 @@ msgstr "Il est aussi possible de glisser-déposer des fichiers média ici."
 #: src/mkvtoolnix-gui/forms/merge/tool.h:441
 #, no-c-format
 msgid "D&&D"
-msgstr ""
+msgstr "Glisser-déposer"
 
 #: src/mkvtoolnix-gui/forms/util/language_dialog.h:383
 #: src/mkvtoolnix-gui/forms/util/language_dialog.h:384
@@ -13310,17 +13310,17 @@ msgstr "Quand des fichiers d'une application externe sont glissés-déposés sur
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:447
 #, no-c-format
 msgid "Normally the program will chose what to do with the dropped files based on the preferences, e.g. always add them to the current multiplex settings or ask the user interactively what to do."
-msgstr ""
+msgstr "Normalement le programme choisira quoi faire des fichiers déposés selon les préférences, par ex. de toujours les ajouter aux paramètres de multiplexage courant ou de demander à l'utilisateur qu'en faire."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:448
 #, no-c-format
 msgid "If enabled, zones will be shown that files can be dropped on to circumvent the preferences."
-msgstr ""
+msgstr "Si activé, des zones seront affichées où il sera possible de déposer des fichiers pour contourner les préférences."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:449
 #, no-c-format
 msgid "Each zone corresponds to and selects one of the possible actions."
-msgstr ""
+msgstr "Chaque zone correspond à, et sélectionne une des actions possibles."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:455
 #, no-c-format
@@ -15731,29 +15731,29 @@ msgid "Adding the job to the queue failed"
 msgstr "Échec de l'ajout de la tâche à la file d'attente"
 
 #: src/mkvtoolnix-gui/merge/tool.cpp:349
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Drag & drop files here to add all of them to the current multiplex settings."
-msgstr "Par défaut tous les fichiers sont toujours ajoutés aux paramètres de multiplexage actuels."
+msgstr "Glisser-déposer des fichiers ici pour tous les ajouter aux paramètres de multiplexage courant."
 
 #: src/mkvtoolnix-gui/merge/tool.cpp:350
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Drag & drop files here to create a new multiplex settings tab & add all files there."
-msgstr "Créer un nouvel onglet de paramètres et les y ajouter tous"
+msgstr "Glisser-déposer des fichiers ici pour créer un nouvel onglet de paramètres de multiplexage et y ajouter tous les fichiers."
 
 #: src/mkvtoolnix-gui/merge/tool.cpp:351
 #, no-c-format
 msgid "Drag & drop files here to create a new multiplex settings tab per dropped file & add one file to each new tab."
-msgstr ""
+msgstr "Glisser-déposer des fichiers ici pour créer un nouvel onglet de paramètres de multiplexage par fichier, et y ajouter un fichier par onglet."
 
 #: src/mkvtoolnix-gui/merge/tool.cpp:352
 #, no-c-format
 msgid "Drag & drop image files here to attach them as cover images to be used by players."
-msgstr ""
+msgstr "Glisser-déposer des fichiers ici pour les attacher comme images de jaquette qui seront utilisées par les lecteurs."
 
 #: src/mkvtoolnix-gui/merge/tool.cpp:353
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Drag & drop image files here to attach them as general attachments."
-msgstr "Par défaut tous les fichiers sont toujours ajoutés aux paramètres de multiplexage actuels."
+msgstr "Glisser-déposer des fichiers ici pour les attacher comme pièces jointes générales."
 
 #: src/mkvtoolnix-gui/merge/tool.cpp:382
 #, no-c-format
