program translations: update Turkish

--- a/po/tr.po
+++ b/po/tr.po
@@ -10180,7 +10180,7 @@ msgstr "Görüntü izleri içeren dosyalar için her &zaman yeni çoklama ayarla
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2344
 #, no-c-format
 msgid "Show special drag && drop &zones"
-msgstr ""
+msgstr "Özel sürükle ve bırak &bölgelerini göster"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2345
 #, no-c-format
@@ -11518,7 +11518,7 @@ msgstr "Ayrıca buraya medya dosyalarını sürükleyip bırakabilirsiniz."
 #: src/mkvtoolnix-gui/forms/merge/tool.h:441
 #, no-c-format
 msgid "D&&D"
-msgstr ""
+msgstr "SveB"
 
 #: src/mkvtoolnix-gui/forms/util/language_dialog.h:383
 #: src/mkvtoolnix-gui/forms/util/language_dialog.h:384
