program translations: update Turkish

--- a/po/tr.po
+++ b/po/tr.po
@@ -13274,17 +13274,17 @@ msgstr "Kullanıcı dosyaları çoklama aracı üzerindeki harici bir uygulamada
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:447
 #, no-c-format
 msgid "Normally the program will chose what to do with the dropped files based on the preferences, e.g. always add them to the current multiplex settings or ask the user interactively what to do."
-msgstr ""
+msgstr "Normalde program, tercihlere dayanarak bırakılan dosyalarla ne yapacağını seçecektir, örn. bunları her zaman geçerli çoklama ayarlarına ekleyin veya kullanıcıya etkileşimli olarak ne yapacağını sorun."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:448
 #, no-c-format
 msgid "If enabled, zones will be shown that files can be dropped on to circumvent the preferences."
-msgstr ""
+msgstr "Eğer etkinleştirildiyse, tercihleri ​​atlatmak için dosyaların bırakılabileceği bölgeler gösterilecektir."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:449
 #, no-c-format
 msgid "Each zone corresponds to and selects one of the possible actions."
-msgstr ""
+msgstr "Her bölge olası eylemlerden birine karşılık gelir ve seçer."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:455
 #, no-c-format
@@ -15682,29 +15682,29 @@ msgid "Adding the job to the queue failed"
 msgstr "İş kuyruğa ekleme başarısız oldu"
 
 #: src/mkvtoolnix-gui/merge/tool.cpp:349
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Drag & drop files here to add all of them to the current multiplex settings."
-msgstr "Varsayılan, her zaman tüm dosyaları şu anki çoklama ayarlarına eklemektir."
+msgstr "Tüm bunları geçerli çoklama ayarlarına eklemek için dosyaları buraya sürükleyin ve bırakın."
 
 #: src/mkvtoolnix-gui/merge/tool.cpp:350
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Drag & drop files here to create a new multiplex settings tab & add all files there."
-msgstr "Bir yeni çoklama ayarları sekmesi oluştur ve tüm dosyaları oraya ekle"
+msgstr "Yeni bir çoklama ayarları sekmesi oluşturmak ve tüm dosyaları oraya eklemek için dosyaları buraya sürükleyin ve bırakın."
 
 #: src/mkvtoolnix-gui/merge/tool.cpp:351
 #, no-c-format
 msgid "Drag & drop files here to create a new multiplex settings tab per dropped file & add one file to each new tab."
-msgstr ""
+msgstr "Bırakılan dosya başına yeni bir çoklama ayarları sekmesi oluşturmak için dosyaları buraya sürükleyin ve bırakın ve her yeni sekmeye bir dosya ekleyin."
 
 #: src/mkvtoolnix-gui/merge/tool.cpp:352
 #, no-c-format
 msgid "Drag & drop image files here to attach them as cover images to be used by players."
-msgstr ""
+msgstr "Oynatıcılar tarafından kullanılacak kapak resimleri olarak eklemek için resim dosyalarını buraya sürükleyin ve bırakın."
 
 #: src/mkvtoolnix-gui/merge/tool.cpp:353
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Drag & drop image files here to attach them as general attachments."
-msgstr "Varsayılan, her zaman tüm dosyaları şu anki çoklama ayarlarına eklemektir."
+msgstr "Genel ekler olarak eklemek için resim dosyalarını buraya sürükleyin ve bırakın."
 
 #: src/mkvtoolnix-gui/merge/tool.cpp:382
 #, no-c-format
