--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -1,3 +1,9 @@
+mkvtoolnix (91.0-0~bunkus01) oracular; urgency=low
+
+  * New version.
+
+ -- Moritz Bunkus <moritz@bunkus.org>  Sun, 16 Mar 2025 15:45:45 +0100
+
 mkvtoolnix (90.0-0~bunkus01) oracular; urgency=low
 
   * New version.
