--- a/doc/man/po4a/po/zh_TW.po
+++ b/doc/man/po4a/po/zh_TW.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: MKVToolNix\n"
 "POT-Creation-Date: 2025-04-26 13:49+0200\n"
 "PO-Revision-Date: 2016-02-03 20:53+0000\n"
-"Last-Translator: HULEN, 2022\n"
-"Language-Team: Chinese (Taiwan) (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/zh_TW/)\n"
+"Last-Translator: Chun-Kai Mao <chunkai.mao@gmail.com>, 2019-2022,2025\n"
+"Language-Team: Chinese (Taiwan) (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/zh_TW/)\n"
 "Language: zh_TW\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -119,7 +119,7 @@ msgstr "<abbrev>XML</abbrev>"
 #: doc/man/mkvpropedit.xml:21
 #: doc/man/mkvtoolnix-gui.xml:21
 msgid "en"
-msgstr "zh-Hant"
+msgstr "zh-TW"
 
 #. type: Content of: <refentry><refentryinfo>
 #: doc/man/mkvextract.xml:23
