--- a/po/hu.po
+++ b/po/hu.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: hu\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2025-02-27 20:49+0100\n"
-"PO-Revision-Date: 2025-05-07 19:52+0200\n"
+"PO-Revision-Date: 2025-05-10 13:24+0200\n"
 "Last-Translator: John Fowler <john@madarasz.page>\n"
 "Language-Team: \n"
 "Language: hu\n"
@@ -2788,9 +2788,7 @@ msgstr "nyelv (IETF BCP 47): {0}"
 msgid ""
 "default duration: {0:.3f}ms ({1:.3f} frames/fields per second for a video "
 "track)"
-msgstr ""
-"alapértelmezett időtartam: {0:.3f}ms ({1:.3F} képkocka/mező másodpercenként "
-"egy videósávhoz)"
+msgstr "alapértelmezett időtartam: {0:.3f}ms ({1:.3f} képkocka/mező másodpercenként egy videósávhoz)"
 
 #: src/common/kax_info.cpp:637
 #, no-c-format, c++-format
@@ -2981,7 +2979,7 @@ msgstr "{0} (az mkvmerge & mkvextract számazonosítója: {1})"
 #: src/common/kax_info.cpp:855
 #, no-c-format, c++-format
 msgid "{0} ({1:.3f} frames/fields per second for a video track)"
-msgstr "{0} ({1:.3F} képkocka/mező másodpercenként egy videósávhoz)"
+msgstr "{0} ({1:.3f} képkocka/mező másodpercenként egy videósávhoz)"
 
 #: src/common/kax_info.cpp:864
 #, no-c-format
